--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Olivando's World
+subtitle: Return home
 description: >- # this means to ignore newlines until "baseurl:"
   A documentation of my adventurs in IT/CS/Homelab
 #twitter_username: username
@@ -22,7 +23,7 @@ minimal_mistakes_skin: dark
 locale: en-GB
 search: true
 
-url: https://OlivandoGit.github.io
+url: https://Olivando.me
 baseurl: /
 repository: OlivandoGit/OlivandoGit.github.io
 
@@ -34,7 +35,7 @@ remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
 #paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+# paginate_path: /page:num/
 timezone: Europe/London # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
@@ -79,6 +80,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/OlivandoGit"
+
+atom_feed:
+  hide: true
 
 
 defaults:
